minor tweaks to remove code from presentation

--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
         
 	<link rel="stylesheet" href="./css/screen.css" type="text/css" media="screen, projection">
 			
-  	<script src="./js/socket.io.js"></script>
-
-  	<script src="./js/recon.js"></script>
 
 	</head>
 	
-	
-	
-	<body onLoad="connect()">
-
+	<body>
 		<div id="status"></div>
 		<div id="ccFeed"></div>
 
+        <!-- Scripts -->
+        <script src="./js/socket.io.js"></script>
+        <script src="./js/recon.js"></script>
 	</body>
-
 </html>
