starting over with backbone-boilerplate and started porting over lauren's code into the new system

--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<html>
-	
-	<head>
-	
-	<title>ReCon12 Frontend Tests</title>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-        
-	<link rel="stylesheet" href="./css/screen.css" type="text/css" media="screen, projection">
-			
-  	<script src="./js/socket.io.js"></script>
+  <title>ReCon12 Frontend Tests</title>
 
-  	<script src="./js/recon.js"></script>
+  <!-- Application styles. -->
+  <link rel="stylesheet" href="assets/css/index.css">
+</head>
 
-	</head>
-	
-	
-	
-	<body onLoad="connect()">
+<body>
+  <!-- Main container. -->
+  <div role="main" id="main"></div>
 
-		<div id="status"></div>
-		<div id="ccFeed"></div>
-
-	</body>
-
+  <!-- Application source. -->
+  <script data-main="app/config" src="assets/js/libs/require.js"></script>
+</body>
 </html>
