--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>ReCon12 Frontend Tests</title>
 
   <!-- Application styles. -->
-  <link rel="stylesheet" href="assets/css/index.css">
+  <link rel="stylesheet" href="/app/styles/index.css">
 </head>
 
 <body>
@@ -16,6 +16,6 @@
   <div role="main" id="main"></div>
 
   <!-- Application source. -->
-  <script data-main="app/config" src="assets/js/libs/require.js"></script>
+  <script data-main="/app/config" src="/vendor/js/libs/require.js"></script>
 </body>
 </html>
