--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div role="main" id="main"></div>
 
   <!-- Application source. -->
-  <script data-main="/app/config" src="/vendor/js/libs/require.js"></script>
+  <script data-main="app/core/baseConfig"
+    src="/vendor/js/libs/require.js"></script>
 </body>
 </html>
