--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1,
+    maximum-scale=1">
 
   <title>ReCon12 Frontend Tests</title>
 
@@ -16,7 +17,7 @@
   <div role="main" id="main"></div>
 
   <!-- Application source. -->
-  <script data-main="app/core/baseConfig"
-    src="/vendor/js/libs/require.js"></script>
+  <script data-main="app/core/baseConfig" src="/vendor/js/libs/require.js">
+    </script>
 </body>
 </html>
