started working on wordData model

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <div role="main" id="main"></div>
 
   <!-- Application source. -->
-  <script data-main="app/core/baseConfig" src="/vendor/js/libs/require.js">
-    </script>
+  <script data-main="app/core/baseConfig" src="/vendor/js/libs/require.js"></script>
 </body>
 </html>
