--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!doctype html>
 <html lang="en">
 <head>
+ <script type="text/javascript">
+  (function() {
+    var config = {
+      kitId: 'wno7vuq',
+      scriptTimeout: 3000
+    };
+    var h=document.getElementsByTagName("html")[0];h.className+=" wf-loading";var t=setTimeout(function(){h.className=h.className.replace(/(\s|^)wf-loading(\s|$)/g," ");h.className+=" wf-inactive"},config.scriptTimeout);var tk=document.createElement("script"),d=false;tk.src='//use.typekit.net/'+config.kitId+'.js';tk.type="text/javascript";tk.async="true";tk.onload=tk.onreadystatechange=function(){var a=this.readyState;if(d||a&&a!="complete"&&a!="loaded")return;d=true;clearTimeout(t);try{Typekit.load(config)}catch(b){}};var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(tk,s)
+  })();
+</script>
+
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <!-- 
+  <script type="text/javascript" src="//use.typekit.net/wno7vuq.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  -->
+   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1,
     maximum-scale=1">
 
@@ -10,6 +24,11 @@
 
   <!-- Application styles. -->
   <link rel="stylesheet" href="/app/styles/index.css">
+  <!-- Conditional IE CSS, part of Blueprint grid system. -->
+  <!--[if lt IE 8]>0
+	<link rel="stylesheet" href="output/cw136gw24cc06/ie.css" type="text/css" media="screen, projection" />
+<![endif]-->
+  
 </head>
 
 <body>
