--- a/splash.html
+++ b/splash.html
@@ -62,7 +62,7 @@
     
     <div id="footerBlock">
       <div id="partners">
-        Partners <br />
+        <!-- Partners <br />	-->
         <a href="http://www.sosolimited.com"><img src="images/soso-logo.png" /></a>
         <a href="http://thecreatorsproject.com"><img src="images/creators-logo.png" /></a>
       </div>
@@ -77,7 +77,7 @@
       </div>
     </div>
 
-    <div id="underlay"><div>jobs<br />cut</div></div>
+    <div id="underlay"><div>jobs<br />cut<br />taxes<br />government</div></div>
     <div id="stripes"><div></div><div></div><div></div></div>
   </div>
 
