added tim's scroll message code

--- a/splash.html
+++ b/splash.html
@@ -48,7 +48,7 @@
       <div id="Romney">Romney</div>
     </div>
     <div id="dateBlock">
-      <div id="dateNumber">10/3</div>
+      <div id="dateNumber">10/16</div>
       <div id="dateTagLine">Watch Live October 3<sup>rd</sup><div id="dateTagUnderlay"></div></div>
     </div>
 
@@ -78,7 +78,7 @@
     </div>
   </div>
 
-  <div id="underlay"><div>jobs<br />cut</div></div>
+  <div id="underlay"><div>jobs<br />taxes<br />labor<br />Iran</div></div>
   <div id="stripes"><div></div><div></div><div></div></div>
 </body>
 </html>
