one more small splash adjustment

--- a/splash.html
+++ b/splash.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1,
     maximum-scale=1">
 
-  <title>ReCon12 Frontend Tests</title>
+  <title>ReConstitution 2012</title>
 
   <!-- Application styles. -->
   <link rel="stylesheet" href="app/styles/index.css" />
