omg what have i done?

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <title>ReConstitution 2012</title>
 
   <!-- Application styles. -->
-  <link rel="stylesheet" href="/app/styles/index.css">
+  <link rel="stylesheet" href="/assets/css/index.css">
   <!-- Conditional IE CSS, part of Blueprint grid system. -->
   <!--[if lt IE 8]>0
 	<link rel="stylesheet" href="output/cw136gw24cc06/ie.css" type="text/css" media="screen, projection" />
@@ -36,6 +36,6 @@
   <div role="main" id="main"></div>
 
   <!-- Application source. -->
-  <script data-main="app/core/baseConfig" src="/vendor/js/libs/require.js"></script>
+  <script data-main="app/config" src="/assets/js/libs/require.js"></script>
 </body>
 </html>
