splash page scrolling tweak

--- a/splash.html
+++ b/splash.html
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <div id="underlay"><div>taxes<br />education<br />government<br />unions</div></div>
+  <div id="underlay"><div>taxes<br />education<br />government</div></div>
   <<div id="stripes"><div></div><div></div><div></div></div>
 </body>
 </html>
