--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
     <div class="layout main" id="layout">
 
       <div id="navigation"></div>
-      <div class="comparisons"><div class="wrapper">
-        <div id="comparisons"></div>
-        <span class="close">     Close</span>
+      <div id="comparisons"><div class="wrapper" style="opacity: 0">
       </div></div>
 
       <div id="landing" class="layer container"></div>
