--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <div id="transcript" class="layer container transcript">
         <div class="wrapper">
           <div id="overlay" class="container"></div>
+          <div id="transcriptHeading"></div>
           <!-- Grid test -->
           <!--
           <div id="testGrid" style="visibility:hidden">
