comparison transition and parallax

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="layout main" id="layout">
 
       <div id="navigation"></div>
-      <div id="comparisons"><div class="wrapper" style="opacity: 0"></div></div>
+      <div id="comparisons"><div class="wrapper"></div></div>
 
       <div id="landing" class="layer container"></div>
       <div id="bigWords"></div>
