Include transcript and bigWords in container flow
By allowing the browser to control the positioning of these elements,
their respective containers can grow and shrink accordingly. This allows
the main "layout" container to hide overflowing bigWords and reduce the
amount of space at the bottom of the document.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div id="landing" class="layer container"></div>
       <div id="bigWords"></div>
-      <div id="transcript" class="layer container transcript">
+      <div id="transcript" class="container transcript">
         <div class="wrapper">
           <div id="overlay" class="container"></div>
           <div id="transcriptHeading"></div>
