fixed landing bug

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div class="wrapper">
           <div id="overlay" class="container"></div>
           <div id="transcriptHeading"></div>
+          <div id="curParagraph"></div>
           <!-- Grid test -->
           <!--
           <div id="testGrid" style="visibility:hidden">
