--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-15545165-10']);
 	  _gaq.push(['_trackPageview']);
-	
+	  _gaq.push(['b._setAccount', 'UA-5691958-3']);
+	  _gaq.push(['b._trackPageview']);
+	  	
 	  (function() {
 	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
 	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
